<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.PlayerDeSons">

    <Button
        android:id="@+id/btt_play_som_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/som1"
        app:layout_constraintBottom_toTopOf="@+id/btt_play_som_3"
        app:layout_constraintEnd_toStartOf="@+id/btt_play_som_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btt_play_som_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/som2"
        app:layout_constraintBottom_toTopOf="@+id/btt_play_som_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btt_play_som_1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btt_play_som_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:text="@string/som3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btt_play_som_4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btt_play_som_1" />

    <Button
        android:id="@+id/btt_play_som_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:text="@string/som4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btt_play_som_3"
        app:layout_constraintTop_toBottomOf="@+id/btt_play_som_2" />

    <Button
        android:id="@+id/btt_player_sons_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        app:layout_constraintBottom_toTopOf="@+id/btt_play_som_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btt_play_som_2" />
</androidx.constraintlayout.widget.ConstraintLayout>