<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExercicioListView">

    <ListView
        android:id="@+id/listViewEx7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintTop_toBottomOf="@+id/btt_adicionar_a_list_view"
        tools:layout_editor_absoluteX="-2dp" />

    <Button
        android:id="@+id/btt_adicionar_a_list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/numero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_numero_para_list_view" />

    <EditText
        android:id="@+id/input_numero_para_list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/inserir_numero"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btt_ex_list_view_voltar_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:text="@string/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_numero_para_list_view" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="listViewEx7" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="listViewEx7" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="223dp"
        app:barrierDirection="top"
        app:constraint_referenced_ids="listViewEx7"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="listViewEx7"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>